# leptos_workers

./: CONTRIBUTING.md  Cargo.toml  LICENSE-MIT  README.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: cd.yml  ci.yml
leptos_workers/: Cargo.toml
leptos_workers/src/: codec.rs  lib.rs
leptos_workers/src/executors/: mod.rs  pool_executor.rs  single_executor.rs
leptos_workers/src/messages/: mod.rs  post_message.rs  transferable.rs  transferable_types.rs  worker_message.rs
leptos_workers/src/messages/transferable_types/: base.rs  containers.rs  derivatives.rs  mod.rs
leptos_workers/src/plumbing/: create_worker.rs  dedicated_worker.rs  init_workers.rs  mod.rs  unifunctional_worker.rs  worker_handle.rs  worker_request.rs
leptos_workers/src/worker_message/: mod.rs  transferable.rs  transferable_types.rs  worker_message.rs
leptos_workers/src/workers/: callback_worker.rs  channel_worker.rs  future_worker.rs  mod.rs  stream_worker.rs  transferable.rs  web_worker.rs
leptos_workers/tests/: transferable_contended.rs  transferable_types.rs  worker.rs
leptos_workers/tests/ui/: item-is-not-a-function.rs  item-is-not-a-function.stderr  worker-name-is-not-an-ident.rs  worker-name-is-not-an-ident.stderr
leptos_workers_macro/: Cargo.toml
leptos_workers_macro/src/: lib.rs
leptos_workers_macro/src/v2/: analyze.rs  codegen.rs  lower.rs  mod.rs  parse.rs  pattern_match_hole.rs
scripts/: test.sh
