[workspace]
resolver = "2"
members = ["leptos_workers", "leptos_workers_macro"]

[workspace.dependencies]
console_error_panic_hook = "0.1"
const_format = "0.2"
convert_case = "0.7"
flume = "0.11"
futures = "0.3"
gloo-timers = "0.3"
indoc = "2.0"
js-sys = "0.3"
paste = "1.0"
pollster = "0.4"
pretty_assertions = "1.4.0"
proc-macro-error = "1.0"
proc-macro2 = "1.0"
quote = "1.0"
send_wrapper = "0.6"
serde = "1.0"
serde-wasm-bindgen = "0.6"
syn = "2.0"
thiserror = "2.0"
tracing = "0.1"
tracing-subscriber = "0.3"
tracing-subscriber-wasm = "0.1"
trybuild = "1.0"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
wasm-bindgen-test = "0.3"
web-sys = "0.3"
xxhash-rust = "0.8"
