[package]
name = "leptos_workers"
version = "0.2.2"
edition = "2021"
description = "WebWorker library for the Leptos web framework."
license = "MIT OR Apache-2.0"
readme = "../README.md"
authors = ["Lucas Åström"]
repository = "https://github.com/Jinxit/leptos_workers"
keywords = ["leptos", "web-workers", "wasm"]
categories = ["wasm", "web-programming"]

[features]
default = []
ssr = ["leptos_workers_macro/ssr"]

[dependencies]
leptos_workers_macro = { path = "../leptos_workers_macro", version = "0.2.2" }

console_error_panic_hook = "0.1"
const_format = "0.2"
flume = "0.11"
futures = "0.3"
js-sys = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6"
thiserror = "1.0"
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = "0.3"
tracing-subscriber-wasm = "0.1"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
xxhash-rust = { version = "0.8", features = ["const_xxh64"] }

[dependencies.web-sys]
version = "0.3"
features = [
    "console",
    "Blob",
    "BlobPropertyBag",
    "DedicatedWorkerGlobalScope",
    "Document",
    "ErrorEvent",
    "HtmlElement",
    "HtmlInputElement",
    "Location",
    "MessageEvent",
    "Navigator",
    "Performance",
    "ServiceWorker",
    "ServiceWorkerContainer",
    "ServiceWorkerGlobalScope",
    "ServiceWorkerRegistration",
    "ServiceWorkerState",
    "ServiceWorkerUpdateViaCache",
    "Url",
    "Window",
    "Worker",
    "WorkerLocation",
    "WorkerOptions",
    "WorkerType",
    "MessageChannel",
    "MessagePort",
    "WritableStream",
    "TransformStream",
    "ImageBitmap",
    "OffscreenCanvas",
    "RtcDataChannel",
    "RtcPeerConnection",
]

[dev-dependencies]
gloo-timers = { version = "0.3", features = ["futures"]}
trybuild = "1.0"
pollster = "0.3"
wasm-bindgen-test = "0.3"
paste = "1.0"
