[package]
name = "leptos_workers"
version = "0.2.2"
edition = "2021"
description = "WebWorker library for the Leptos web framework."
license = "MIT OR Apache-2.0"
readme = "../README.md"
authors = ["Lucas Åström"]
repository = "https://github.com/Jinxit/leptos_workers"
keywords = ["leptos", "web-workers", "wasm"]
categories = ["wasm", "web-programming"]

[features]
default = []
ssr = ["leptos_workers_macro/ssr"]

[dependencies]
leptos_workers_macro = { path = "../leptos_workers_macro", version = "0.2.2" }

console_error_panic_hook = { workspace = true }
const_format = { workspace = true }
flume = { workspace = true }
futures = { workspace = true }
js-sys = { workspace = true }
send_wrapper = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde-wasm-bindgen = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true, features = ["log"] }
tracing-subscriber = { workspace = true }
tracing-subscriber-wasm = { workspace = true }
wasm-bindgen = { workspace = true }
wasm-bindgen-futures = { workspace = true }
xxhash-rust = { workspace = true, features = ["const_xxh64"] }
web-sys = { workspace = true, features = [
  "console",
  "Blob",
  "BlobPropertyBag",
  "DedicatedWorkerGlobalScope",
  "Document",
  "ErrorEvent",
  "HtmlElement",
  "HtmlInputElement",
  "Node",
  "MessageEvent",
  "Navigator",
  "Performance",
  "ServiceWorker",
  "ServiceWorkerContainer",
  "ServiceWorkerGlobalScope",
  "ServiceWorkerRegistration",
  "ServiceWorkerState",
  "ServiceWorkerUpdateViaCache",
  "Url",
  "Window",
  "Worker",
  "WorkerLocation",
  "WorkerOptions",
  "WorkerType",
  "MessageChannel",
  "MessagePort",
  "WritableStream",
  "TransformStream",
  "ImageBitmap",
  "OffscreenCanvas",
  "RtcDataChannel",
  "RtcPeerConnection",
] }

[dev-dependencies]
gloo-timers = { workspace = true, features = ["futures"] }
trybuild = { workspace = true }
pollster = { workspace = true }
wasm-bindgen-test = { workspace = true }
paste = { workspace = true }
