[package]
name = "leptos_workers_macro"
version = "0.1.0"
edition = "2021"
description = "Macros for leptos_workers, a WebWorker library for the Leptos web framework."
license = "MIT OR Apache-2.0"

[lib]
name = "leptos_workers_macro"
path = "src/lib.rs"
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full"] }
proc-macro-error = "1.0"