[package]
name = "leptos_workers_macro"
version = "0.2.1"
edition = "2021"
description = "Macros for leptos_workers, a WebWorker library for the Leptos web framework."
license = "MIT OR Apache-2.0"
readme = "../README.md"
authors = ["Lucas Åström"]
repository = "https://github.com/Jinxit/leptos_workers"
keywords = ["leptos", "web-workers", "wasm"]
categories = ["wasm", "web-programming"]

[lib]
name = "leptos_workers_macro"
path = "src/lib.rs"
proc-macro = true

[features]
ssr = []

[dependencies]
convert_case = "0.6 "
indoc = "2.0"
pretty_assertions = "1.4.0"
proc-macro-error = "1.0"
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["extra-traits", "full"] }
