[package]
name = "leptos_workers_macro"
version = "0.3.0"
edition = "2021"
description = "Macros for leptos_workers, a WebWorker library for the Leptos web framework."
license = "MIT OR Apache-2.0"
readme = "../README.md"
authors = ["Lucas Åström"]
repository = "https://github.com/Jinxit/leptos_workers"
keywords = ["leptos", "web-workers", "wasm"]
categories = ["wasm", "web-programming"]

[lib]
name = "leptos_workers_macro"
path = "src/lib.rs"
proc-macro = true

[features]
ssr = []

[dependencies]
convert_case = { workspace = true }
indoc = { workspace = true }
pretty_assertions = { workspace = true }
proc-macro-error2 = { workspace = true }
proc-macro2 = { workspace = true }
quote = { workspace = true }
syn = { workspace = true, features = ["extra-traits", "full"] }
